Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/Certificate__c.object-meta.xml
<CustomObject>
    <label>Certificate</label>
    <nameField>
        <displayFormat>Cert-{00000000}</displayFormat>
        <label>Certificate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>