Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/fields/Pay_Profile__c.field-meta.xml
<CustomField>
    <fullName>Pay_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pay Profile</label>
    <referenceTo>IP_PayProfile__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>