Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/fields/Public_Liability_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Liability Insurance</label>
    <type>Checkbox</type>
</CustomField>