Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/fields/Public_Liability_Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability_Insurance_Expiry_Date__c</fullName>
    <label>Public Liability Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>