Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/fields/Self_Bill_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Self_Bill_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Bill Agreement</label>
    <type>Checkbox</type>
</CustomField>