Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/fields/Self_Bill_Agreement_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Self_Bill_Agreement_Expiry_Date__c</fullName>
    <label>Self Bill Agreement Expiry Date</label>
    <type>Date</type>
</CustomField>