Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/validationRules/For_LTD_company_only.validationRule-meta.xml
<ValidationRule>
    <fullName>For_LTD_company_only</fullName>
    <active>true</active>
    <errorConditionFormula>Pay_Profile__r.RecordType.DeveloperName != &apos;LTD&apos;</errorConditionFormula>
    <errorMessage>This certificate is for LTD company only</errorMessage>
</ValidationRule>