Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/validationRules/PublicLiabilityInsurance_ExpiryDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PublicLiabilityInsurance_ExpiryDateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( Public_Liability_Insurance__c ),IF( ISBLANK( Public_Liability_Insurance_Expiry_Date__c ),false,true))</errorConditionFormula>
    <errorMessage>Expiry Date for Public Liability Insurance can&apos;t be set if Public Liability Insurance is not checked.</errorMessage>
</ValidationRule>