Frankbelford/uatv1ba/force-app/main/default/objects/Certificate__c/validationRules/SelfBillAgreements_ExpiryDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SelfBillAgreements_ExpiryDateCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(Self_Bill_Agreement__c),IF( ISBLANK( Self_Bill_Agreement_Expiry_Date__c),false,true))</errorConditionFormula>
    <errorMessage>Expiry Date for Self Bill Agreement can&apos;t be set if Self Bill Agreement is not checked.</errorMessage>
</ValidationRule>